<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.residence_details.activities.PredictedPriceDetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_book_now_predicted"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_predicted_price_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/error_search"
        app:layout_constraintEnd_toEndOf="@id/toolbar_book_now_predicted"
        app:layout_constraintStart_toStartOf="@+id/toolbar_book_now_predicted"
        app:layout_constraintTop_toBottomOf="@id/toolbar_book_now_predicted" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_predicted_title_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/check_the_predicted"
        android:textColor="@color/colorPrimaryText"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_predicted_price_error"
        app:layout_constraintStart_toStartOf="@+id/iv_predicted_price_error"
        app:layout_constraintTop_toBottomOf="@+id/iv_predicted_price_error" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_predicted_title_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/price_for_this"
        android:textColor="@color/colorPrimaryText"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_predicted_title_1"
        app:layout_constraintStart_toStartOf="@+id/tv_predicted_title_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_predicted_title_1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_predicted_title_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/property"
        android:textColor="@color/colorPrimaryText"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_predicted_title_2"
        app:layout_constraintStart_toStartOf="@+id/tv_predicted_title_2"
        app:layout_constraintTop_toBottomOf="@+id/tv_predicted_title_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_show_predicted_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:text="@string/show"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_predicted_title_3"
        app:layout_constraintStart_toStartOf="@+id/tv_predicted_title_3"
        app:layout_constraintTop_toBottomOf="@id/tv_predicted_title_3" />

</androidx.constraintlayout.widget.ConstraintLayout>