<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.ResetPasswordSuccessActivity">

    <ImageView
        android:id="@+id/iv_success_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="27dp"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="27dp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/iv_success"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_congrats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="27dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/tv_congrats"
        android:textColor="@color/colorThemeBlue"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="@id/iv_success_sign_up"
        app:layout_constraintStart_toStartOf="@id/iv_success_sign_up"
        app:layout_constraintTop_toBottomOf="@id/iv_success_sign_up" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_password_reset_successful"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="27dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/tv_password_reset_successful"
        android:textColor="@color/colorPrimaryText"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@id/tv_congrats"
        app:layout_constraintStart_toStartOf="@id/tv_congrats"
        app:layout_constraintTop_toBottomOf="@id/tv_congrats" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_back_reset_password_success"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:text="@string/btn_back"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_password_reset_successful"
        app:layout_constraintStart_toStartOf="@+id/tv_password_reset_successful"
        app:layout_constraintTop_toBottomOf="@id/tv_password_reset_successful"
        tools:ignore="RtlSymmetry" />

</androidx.constraintlayout.widget.ConstraintLayout>