<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <View
        android:id="@+id/view_edit_list_success"
        android:layout_width="50dp"
        android:layout_height="3dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_background_edit"
        android:backgroundTint="@color/colorPrimaryText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_edit_list_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/iv_success"
        app:layout_constraintEnd_toEndOf="@id/view_edit_list_success"
        app:layout_constraintStart_toStartOf="@+id/view_edit_list_success"
        app:layout_constraintTop_toBottomOf="@id/view_edit_list_success" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_edit_list_success_title_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/your_listing_just"
        android:textColor="@color/colorPrimaryText"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_edit_list_success"
        app:layout_constraintStart_toStartOf="@+id/iv_edit_list_success"
        app:layout_constraintTop_toBottomOf="@+id/iv_edit_list_success" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_edit_list_success_title_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/successfully_updated"
        android:textColor="@color/colorPrimaryText"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_edit_list_success_title_1"
        app:layout_constraintStart_toStartOf="@+id/tv_edit_list_success_title_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_edit_list_success_title_1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/close_edit_list_success"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/close"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_edit_list_success_title_2"
        app:layout_constraintStart_toStartOf="@+id/tv_edit_list_success_title_2"
        app:layout_constraintEnd_toEndOf="@+id/tv_edit_list_success_title_2"/>

</androidx.constraintlayout.widget.ConstraintLayout>