<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_message_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/message_options"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryText"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/ll_edit_message_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_edit_message_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:background="@drawable/ic_edit"
            android:backgroundTint="@color/colorPrimaryText"
            android:contentDescription="@null" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_edit_message_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/edit"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_delete_message_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_delete_message_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:background="@drawable/ic_delete"
            android:backgroundTint="@color/colorPrimaryText"
            android:contentDescription="@null" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_delete_message_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/delete"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>
